2005-03-15	Florian Boor  	<florian.boor@kernelconcepts.de>

	* network.c: Removed possebility to remove global tab.
	             Minor GUI layout fixes.

2005-03-11	Florian Boor  	<florian.boor@kernelconcepts.de>

	* Removed several obsolete inclusions of render.h.

2005-03-05	Florian Boor  	<florian.boor@kernelconcepts.de>

	* keys/keyboard.c: Improved GUI layout and implementation.
	* keys/keyctl.c: Fixed parser bugs.
	* keys/keys.c: Add saving support for all applets.
	* data/key-layout: Moved to less stupid default.

2005-03-05	Florian Boor  	<florian.boor@kernelconcepts.de>

	* kbd/keyboard.c: Add some more bits for kbdd configuration support.
	                  Reodered keyboard list.
					  Missing: Description handling, GUI fixes, IR devices
	* serial.h: Publish port list.
	* data/key-commands: Add suspend command.
	
2005-03-04	Florian Boor  	<florian.boor@kernelconcepts.de>

	* keys/keyboard.c: Add some more bits for kbdd configuration support.
	* suid.c: Save keyboard config.
	
2005-03-02	Florian Boor  	<florian.boor@kernelconcepts.de>

	* keys/keyboard.c: Add some more bits for kbdd configuration support.
	* main.c: Show infoprint on save.
	
2005-03-01	Florian Boor  	<florian.boor@kernelconcepts.de>

	* keys/keyboard.c: Add some bits for kbdd configuration support.

2005-02-27	Florian Boor  	<florian.boor@kernelconcepts.de>

	* theme.c: Changed default.
	
2005-02-25	Florian Boor  	<florian.boor@kernelconcepts.de>

	* keyctl.c: Implemeting configurable buttons (continued).
	* data/key-layout: Add some more keys.
	
2005-02-21	Florian Boor  	<florian.boor@kernelconcepts.de>

	* keyctl.c: Formating changes, implemeted configurable buttons.
	* data/key-layout: Add some more keys.
	
2005-02-21	Florian Boor  	<florian.boor@kernelconcepts.de>

	* keyctl.c: Changed some definitions.
	* data/key-layout: New file providing key layout for iPaq devices.

2005-02-18	Florian Boor  	<florian.boor@kernelconcepts.de>
